--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <script src="js/vendor.bundle.js"></script>
         <script src="js/bundle.js"></script>
     </body>
 </html>
